chore: Update langchain-openai dependency to version 0.1.20

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ langchain-core
 langchain-community
 langgraph
 langsmith
-langchain-openai
+langchain-openai==0.1.20
 python-dotenv
 gitpython
 flask
