update mac-local files

--- a/requirements.txt
+++ b/requirements.txt
@@ -19,4 +19,4 @@ git+https://github.com/princeton-nlp/SWE-bench.git#egg=swebench
 langchain-huggingface
 langchain-text-splitters
 langchain-chroma
-pysqlite3-binary
+#pysqlite3-binary
