Update default configuration and add dataset loading script

--- a/configs/default_config.toml
+++ b/configs/default_config.toml
@@ -1,5 +1,5 @@
 [dataset]
-id = "ef311ba7-75d8-4c87-a888-ee7257d796ff"
+id = "2c3aba9f-b93f-4741-b329-094814a9279c"
 count = "all"
 # Specify the count of examples to evaluate, if you want to evaluate all examples, specify "all"
 experiment_name = "None"
@@ -8,7 +8,8 @@ experiment_name = "None"
 [prediction]
 create_code_base = true
 execution_limit = 20
-tools = ["bash_command", 
+tools = [
+    "bash_command", 
     "directory_tree", 
     "create_file", 
     "find_file", 
